// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox /> should render a checkbox with a label 1`] = `
<div>
  <div
    class="css-15cclx7"
  >
    <input
      class="css-kzrhrz"
      data-testid="test-checkbox"
      id="test"
      type="checkbox"
    />
    <label
      class="css-15xkxno"
      for="test"
    >
      I am a checkbox
    </label>
  </div>
</div>
`;

exports[`<Checkbox /> should render a checkbox with no label 1`] = `
<div>
  <div
    class="css-15cclx7"
  >
    <input
      class="css-kzrhrz"
      data-testid="test-checkbox"
      id="test"
      type="checkbox"
    />
  </div>
</div>
`;
